システム作成画面追加、アルゴリズム画面修正

--- a/appproject/accounts/templates/block/index.html
+++ b/appproject/accounts/templates/block/index.html
@@ -236,7 +236,8 @@ const visual = document.getElementById("visual-area");
 
           // システムタブ
           if(tab.id === 'tab-system'){
-            window.location.href = 'http://127.0.0.1:8000/accounts/system/';
+            // system_choice.html へ遷移
+            window.location.href = 'http://127.0.0.1:8000/accounts/system/choice/';
             return;
           }
           // アルゴリズムタブ
