--- a/appproject/accounts/templates/accounts/t_login.html
+++ b/appproject/accounts/templates/accounts/t_login.html
@@ -54,6 +54,9 @@
             <input type="text" name="username" id="id_username" required>
             <label for="id_password">パスワード</label>
             <input type="password" name="password" id="id_password" required>
+            <div class="links">
+                <a href="{% url 'teacher_signup' %}" class="muted">アカウント新規作成リンク</a>
+            </div>
             <button type="submit">ログイン</button>
         </form>
     </div>
