--- a/appproject/accounts/templates/system/save.html
+++ b/appproject/accounts/templates/system/save.html
@@ -238,7 +238,8 @@
             return;
           }
           if(tab.id === 'tab-algorithm'){
-            window.location.href = '/accounts/block/';
+            // 変更: アルゴリズムタブ押下で block_choice へ遷移
+            window.location.href = '/accounts/block/choice/';
             return;
           }
           // 他タブは見た目のみ
